{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 45,
  "lineage": "ab673655-b414-8d39-26ae-098828cfd5a4",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8783a0bfd0c4db1",
            "arn": "arn:aws:ec2:us-east-2:517433031596:instance/i-017fedef17a42b51d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017fedef17a42b51d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-084f43f62582bf0f7",
            "private_dns": "ip-10-0-1-25.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "public_ip": "3.137.173.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04dcf54174da3ed10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0e68af32de020f9",
            "tags": {
              "Name": "tomcat_server"
            },
            "tags_all": {
              "Name": "tomcat_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a4f453715e16ce1"
            ]
          },
          "dependencies": [
            "module.network.aws_key_pair.mykey",
            "module.network.aws_security_group.allow_ssh",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.your_vpc",
            "module.network.data.aws_ami.ubuntu",
            "module.network.tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:517433031596:internet-gateway/igw-0782118727e071998",
            "id": "igw-0782118727e071998",
            "owner_id": "517433031596",
            "tags": {
              "Name": "igw-tomcat"
            },
            "tags_all": {
              "Name": "igw-tomcat"
            },
            "vpc_id": "vpc-0722b26ad5b5e54b4"
          },
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0782118727e071998",
            "id": "r-rtb-09785885edd6bb16d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09785885edd6bb16d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:517433031596:route-table/rtb-09785885edd6bb16d",
            "id": "rtb-09785885edd6bb16d",
            "owner_id": "517433031596",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "public-route-table"
            },
            "tags_all": {
              "name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0722b26ad5b5e54b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ass_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05225681524eab5e8",
            "route_table_id": "rtb-09785885edd6bb16d",
            "subnet_id": "subnet-0e0e68af32de020f9"
          },
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:517433031596:security-group/sg-04a4f453715e16ce1",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a4f453715e16ce1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "517433031596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_8080"
            },
            "tags_all": {
              "Name": "allow_ssh_8080"
            },
            "timeouts": null,
            "vpc_id": "vpc-0722b26ad5b5e54b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:517433031596:subnet/subnet-0e0e68af32de020f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0e68af32de020f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517433031596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0722b26ad5b5e54b4"
          },
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "your_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:517433031596:vpc/vpc-0722b26ad5b5e54b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047ca4501093c3a86",
            "default_route_table_id": "rtb-071f02aa771896304",
            "default_security_group_id": "sg-0a8ba595234ca94b0",
            "dhcp_options_id": "dopt-02890ce90826a75a0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0722b26ad5b5e54b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071f02aa771896304",
            "owner_id": "517433031596",
            "tags": {
              "Name": "tomcat-vpc"
            },
            "tags_all": {
              "Name": "tomcat-vpc"
            }
          }
        }
      ]
    }
  ]
}